yoshimi 2.2.2.1

2022-11-7 Will
bn2160
Merged in copyPaste so branches don't get out of sync.
Fixed CLI regression - not importing Scala keymaps.
BugFix: scale imports not reporting names when loaded.
Modifed TextMsgBuffer.h to provide non-destructive read.


2022-10-22 Will
bn2159
* moved down top few control values for MIDI-learn
* moved partBusy control from part section to top level
* removed some (now redundant) code

* forgot to update Control Numbers file :(

2022-10-15 Will
bn2158
* BugFix: System effect dynfilter filter window not resizing text.

2022-9-26 Will
bn2157
* applied temporary fix for wrong EQ graph on loading.
* added some additional code comments.

2022-9-12 Will
bn2156
* Applied riscV64 patch from debian.
* Changed text 'distorsion' to 'distortion' in code.
  debian was reporting this as 'spelling error in binary'
* Set bugfix release 2.2.2.1

2022-9-8 Will
bn2155
* BugFix: disabling a part in the panel window marked the main window
  as disabled when that was pointed to a different part.

2022-9-1 Will
bn2154
* Updated meta-data
* Updated HTML guide
* Set release version 2.2.2

2022-8-29 Kristian
bn2153-a
* Removed redundant (time wasting) code from LV2.

2022-8-27 Will
bn2153
* Re-ordered retry attempts in MusicClient.cpp to avoid occasional lockups.

2022-8-21 Will
bn2152
* Split harmonicPhaseBandwidth label
  SubSynth -> harmonicBandwidth
  Add/PadSynth -> harmonicPhase

2022-8-20 Kristian
bn2151a
* BugFix: phase randomness not recognised by modulators.

2022-8-17 Will
bn2151
* Fixed MIDI-learn regressions.
  Settings saved, but not received.
* Suppressed clang compliler warnings.
* Doc updates.

bn2150 (branch tempeff)
* Effect control labels now taken back out of inserts and
  as a group now sit immediately above kit numbers.

2022-8-16 Will
bn2149
* Increased size of char array to suppress compiler warnings.
* Changed direct comparison to strcmp( to suppress compiler warnings.