@@ -5,7 +5,7 @@
     Copyright (C) 2002-2005 Nasca Octavian Paul
     Copyright 2009-2011, Alan Calvert
     Copyright 2013, Nikita Zlobin
-    Copyright 2014-2021, Will Godfrey & others
+    Copyright 2014-2022, Will Godfrey & others
 
     This file is part of yoshimi, which is free software: you can redistribute
     it and/or modify it under the terms of the GNU General Public
@@ -249,13 +249,6 @@ void Config::flushLog(void)
 }
 
 
-void Config::clearPresetsDirlist(void)
-{
-    for (int i = 0; i < MAX_PRESET_DIRS; ++i)
-        presetsDirlist[i].clear();
-}
-
-
 bool Config::loadConfig(void)
 {
     if (file::userHome() == "/tmp")
@@ -490,7 +483,7 @@ bool Config::extractBaseParameters(XMLwrapper *xml)
         activeInstance = xml->getparU("active_instances", 0);
     else
         activeInstance = 1;
-    handlePadSynthBuild = xml->getparU("handle_padsynth_build",1, 0,2);  // 0 = blocking/muted, 1 = background thread (=default), 2 = auto-Apply on param change
+    handlePadSynthBuild = xml->getparU("handle_padsynth_build", 1, 0, 2);  // 0 = blocking/muted, 1 = background thread (=default), 2 = auto-Apply on param change
     showCLIcontext = xml->getpar("show_CLI_context", 1, 0, 2);
     GzipCompression = xml->getpar("gzip_compression", GzipCompression, 0, 9);
 
@@ -517,15 +510,10 @@ bool Config::extractBaseParameters(XMLwrapper *xml)
         presetsRootID = 0;
         configChanged = true; // give the user the choice
     }
-
-    // the following three retained here for compatibility with old config type
-    if (!rateChanged)
-        Samplerate = xml->getpar("sample_rate", Samplerate, 44100, 192000);
-    if (!bufferChanged)
-        Buffersize = xml->getpar("sound_buffer_size", Buffersize, MIN_BUFFER_SIZE, MAX_BUFFER_SIZE);
-    if (!oscilChanged)
-        Oscilsize = xml->getpar("oscil_size", Oscilsize, MIN_OSCIL_SIZE, MAX_OSCIL_SIZE);
-
+    if (file::findFile(file::localDir(), "preset", EXTEN::lists).empty())
+    {
+        savePresetsList(); // move these to new location
+    }
 
     xml->exitbranch(); // BaseParameters
     return true;
@@ -580,24 +568,8 @@ bool Config::extractConfigData(XMLwrapper *xml)
         VirKeybLayout = xml->getpar("virtual_keyboard_layout", VirKeybLayout, 1, 6) - 1;
         xmlmax = xml->getpar("full_parameters", xmlmax, 0, 1);
 
-        // get legacy preset dirs
-        int count = 0;
-        for (int i = 0; i < MAX_PRESET_DIRS; ++i)
-        {
-            if (xml->enterbranch("PRESETSROOT", i))
-            {
-                string dir = xml->getparstr("presets_root");
-                if (isDirectory(dir))
-                {
-                    presetsDirlist[count] = dir;
-                    ++count;
-                }
-                xml->exitbranch();
-            }
-        }
-
         bankHighlight = xml->getparbool("bank_highlight", bankHighlight);
-
+        loadPresetsList();
         presetsRootID = xml->getpar("presetsCurrentRootID", presetsRootID, 0, MAX_PRESETS);
 
         Interpolation = xml->getpar("interpolation", Interpolation, 0, 1);
@@ -812,6 +784,82 @@ end_game:
     if (xml)
         delete xml;
     return ok;
+}
+
+
+bool Config::loadPresetsList(void)
+{
+    string presetDirname = file::localDir()  + "/presetDirs";
+    if (!isRegularFile(presetDirname))
+    {
+        Log("Missing preset directories file");
+        return false;
+    }
+    xmlType = TOPLEVEL::XML::PresetDirs;
+
+    XMLwrapper *xml = new XMLwrapper(synth, true);
+    if (!xml)
+    {
+        Log("loadPresetDirs failed xml allocation");
+        return false;
+    }
+    xml->loadXMLfile(presetDirname);
+
+    if (!xml->enterbranch("PRESETDIRS"))
+    {
+        Log("loadPresetDirsData, no PRESETDIRS branch");
+        delete xml;
+        return false;
+    }
+    int count = 0;
+    bool ok = false;
+    do
+    {
+        if (xml->enterbranch("XMZ_FILE", count))
+        {
+            presetsDirlist[count] = xml->getparstr("dir");
+            xml->exitbranch();
+            ok = true;
+        }
+        else
+            ok = false;
+        ++count;
+    }
+    while (ok);
+    xml->endbranch();
+    delete xml;
+
+    return true;
+}
+
+
+bool Config::savePresetsList(void)
+{
+    string presetDirname = file::localDir()  + "/presetDirs";
+    xmlType = TOPLEVEL::XML::PresetDirs;
+
+    XMLwrapper *xml = new XMLwrapper(synth, true);
+    if (!xml)
+    {
+        Log("savePresetDirs failed xml allocation");
+        return false;
+    }
+    xml->beginbranch("PRESETDIRS");
+    {
+        int count = 0;
+        while (!presetsDirlist[count].empty())
+        {
+            xml->beginbranch("XMZ_FILE", count);
+                xml->addparstr("dir", presetsDirlist[count]);
+            xml->endbranch();
+            ++count;
+        }
+    }
+    xml->endbranch();
+    if (!xml->saveXMLfile(presetDirname))
+        Log("Failed to save data to " + presetDirname);
+    delete xml;
+    return true;
 }
 
 
